--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 	<body>
 	
 		<a href="https://emohintac.github.io">
-			<img src="https://s3.bmp.ovh/imgs/2022/05/22/41897561a2e39453.png" width="150" height="50" />
+			<p style="color:#66ccff">Emohintac主站</p>
 		</a>
 		<div>404 Not Found</div>
 		<p align="center" style="font-size:30px": 2em>What are you finding? Here is <b style="color:red">nothing!</b></p>
