--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE HTML>
+
 <html>
+
 	<head>
-		<title>EmohinTac的网站</title>
+
+		<style>
+
+			body {
+
+  					background-color: rgba(173, 216, 230, 0.3)
+				
+				}
+
+			h1 {
+
+  					color: #66ccff;
+
+ 					text-align: center;
+
+				}
+
+		</style>
+	
+		<title>Emohin Tac's Web</title>
+
 	</head>
 
 	<body>
-		<h1 style="color:#66ccff">这里是EmohinTac的网站！</h1>
-		<h2>This is Emohin Tac's Website!</h2>
-		<p>这里还什么都没有</p>
+		
+		<a href="https://emohintac.xyz" style="text-decoration:none">
+			
+			<h1 style="color:#66ccff" align="center">这里是EmohinTac的网站！</h1>
+			
+		</a>
+		
+		<h3>This is Emohin Tac's Website!</h3>
+		
+		<p>可惜这里还什么都没有</p>
+		
 	</body>
+
 </html>
