--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		</style>
 	
 		<title>Emohin Tac's Web</title>
+		
+		<link  href="https://static01.imgkr.com/temp/10ae6adf866a49e4aca8d7689963df70.ico"  rel="shortcut icon" type="image/x-icon" />
 
 	</head>
 
