--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
 	
 	<body>
 	
-		<a href="https://emohintac.github.io">
+		<a href="https://emohintac.xyz">
 			<p style="color:#66ccff">Emohintac主站</p>
 		</a>
 		<div>404 Not Found</div>
