--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Not Found!</title>
-		
+		<link  href="https://static01.imgkr.com/temp/10ae6adf866a49e4aca8d7689963df70.ico"  rel="shortcut icon" type="image/x-icon" />
 	</head>
 	<style type="text/css">
     	* {
