--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Not Found!</title>
-		<link  href="https://static01.imgkr.com/temp/10ae6adf866a49e4aca8d7689963df70.ico"  rel="shortcut icon" type="image/x-icon" />
+		<link  href="https://emohintac.xyz/image/favicon.ico"  rel="shortcut icon" type="image/x-icon" />
 	</head>
 	<style type="text/css">
     	* {
@@ -16,7 +16,7 @@
 	{
 		font-family: fantasy;
 		font-size: 7em;
-        		background: url(https://static01.imgkr.com/temp/bbf33e320caa4d4e9f1da0efe1984edc.png) no-repeat; 
+        		background: url(https://emohintac.xyz/image/404Background.png) no-repeat; 
         		background-origin: border-box;
         		-webkit-background-clip: text;
         		-webkit-text-fill-color: transparent;
