--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 		<title>Emohin Tac's Web</title>
 		
-		<link  href="https://static01.imgkr.com/temp/10ae6adf866a49e4aca8d7689963df70.ico"  rel="shortcut icon" type="image/x-icon" />
+		<link  href="https://emohintac.xyz/image/favicon.ico"  rel="shortcut icon" type="image/x-icon" />
 
 	</head>
 
