--- a/404.html
+++ b/404.html
@@ -26,8 +26,8 @@
 	
 	<body>
 	
-		<a href="https://emohintac.xyz">
-			<p style="color: #66ccff;text-decoration: none;">Emohintac主站</p>
+		<a href="https://emohintac.xyz" style="text-decoration:none">
+			<p style="color: #66ccff;">Emohintac主站</p>
 		</a>
 		<div>404 Not Found</div>
 		<p align="center" style="font-size:30px": 2em>What are you finding? Here is <b style="color:red">nothing!</b></p>
