--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Not Found!</title>
 		<link  href="https://emohintac.xyz/image/favicon.ico"  rel="shortcut icon" type="image/x-icon" />
+		<link rel="stylesheet" href="https://emohintac.xyz/css/homepage.css">
 	</head>
 	<style type="text/css">
     	* {
@@ -16,18 +17,18 @@
 	{
 		font-family: fantasy;
 		font-size: 7em;
-        		background: url(https://emohintac.xyz/image/404Background.png) no-repeat; 
-        		background-origin: border-box;
-        		-webkit-background-clip: text;
-        		-webkit-text-fill-color: transparent;
-       		 text-align: center;
+        	background: url(https://emohintac.xyz/image/404Background.png) no-repeat; 
+        	background-origin: border-box;
+        	-webkit-background-clip: text;
+        	-webkit-text-fill-color: transparent;
+       		text-align: center;
    		 }
 	</style>
 	
 	<body>
 	
 		<a href="https://emohintac.xyz" style="text-decoration:none">
-			<p style="color: #66ccff;">Emohintac主站</p>
+			<p class="homepage">Emohintac主站</p>
 		</a>
 		<div>404 Not Found</div>
 		<p align="center" style="font-size:30px": 2em>What are you finding? Here is <b style="color:red">nothing!</b></p>
